# ShaderPrecompiler

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
include/ShaderPrecompiler/: ast.hpp  diagnostic_reporters.hpp  lexer.hpp  messages.hpp  minimazer.hpp  precompiler.hpp  semantic.hpp  shader_precompiler.hpp  to_glsl.hpp
include/ShaderPrecompiler/precompiler/: precompiler.hpp
src/: ShaderPrecompiler.hpp  ast.cpp  diagnostic_reporters.cpp  glsl.cpp  lexer.cpp  main.cpp  messages.cpp  minimazer.cpp  precompiler.cpp  print_error.hpp  semantic.cpp  shader_precompiler.cpp
src/precompiler/: precompiler.cpp  precompiler.hpp
src/utils/: string_utils.cpp  string_utils.hpp  unique_ptr_casts.hpp
tests/: CMakeLists.txt  TestsMain.cpp  common.hpp
tests/src/: AstTests.hpp  GlslTests.hpp  LexerTests.hpp  MinimizerTests.hpp  PrecompilerTests.hpp  SemanticTests.hpp
